--- a/EX01/fundo04.html
+++ b/EX01/fundo04.html
@@ -12,6 +12,7 @@
             background-size: 200px ;
             background-repeat: no-repeat;
             background-position: center center;
+            background-attachment: fixed;
         }
     </style>
 </head>
