--- a/EX02/table02.html
+++ b/EX02/table02.html
@@ -36,6 +36,7 @@
             background-color:
             darkturquoise;
             font-style: italic;
+            font-weight: bold;
             
         }
 
@@ -76,6 +77,7 @@
         thead {
             background-color: darkblue;
             color: white;
+            font-variant: small-caps;
         }
 
         tfoot {
