--- a/EX03/tabela02.html
+++ b/EX03/tabela02.html
@@ -48,7 +48,7 @@
         }
 
         .csexo {
-            background-color:whitesmoke;
+            background-color:white;
             color: white;
 
         }
